examples/test/testpolicy10064.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10064
  namespace: namespace191
spec:
  podSelector:
    matchLabels:
      key16: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value26
          key13: value36
      podSelector:
        matchLabels:
          key12: value27
          key34: value20
